update po files

--- a/po/it.po
+++ b/po/it.po
@@ -10,11 +10,11 @@ msgid ""
 msgstr ""
 "Project-Id-Version: IceWM 1.2.31\n"
 "Report-Msgid-Bugs-To: https://github.com/bbidulock/icewm/issues\n"
-"POT-Creation-Date: 2018-01-16 16:56-0700\n"
+"POT-Creation-Date: 2018-02-03 20:04-0700\n"
 "PO-Revision-Date: 2018-01-29 17:04+0000\n"
 "Last-Translator: Davide Aiello <davidea@novilinguists.com>\n"
-"Language-Team: Italian "
-"<https://l10n.opensuse.org/projects/icewm/icewm-1-4-branch/it/>\n"
+"Language-Team: Italian <https://l10n.opensuse.org/projects/icewm/icewm-1-4-"
+"branch/it/>\n"
 "Language: it\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -432,8 +432,8 @@ msgstr ""
 "Uso: %s [OPZIONI] [ NOME FILE | URL ]\n"
 "\n"
 "IceHelp è un browser HTML molto semplice per il window manger IceWM.\n"
-"Consente di visualizzare un documento HTML da file o navigare su un sito Web."
-"\n"
+"Consente di visualizzare un documento HTML da file o navigare su un sito "
+"Web.\n"
 "Memorizza le pagine visitate in una cronologia navigabile\n"
 "attraverso combinazioni di tasti e un menu contestuale (tasto destro del "
 "mouse).\n"
@@ -452,8 +452,8 @@ msgstr ""
 "rudimentale).\n"
 "  -f, --faq           Mostra le FAQ e la Guida di IceWM.\n"
 "  -g                  Mostra il sito Web su Github di IceWM.\n"
-"  -i, --icewm         Mostra la pagina di manuale relativa a icewm di IceWM."
-"\n"
+"  -i, --icewm         Mostra la pagina di manuale relativa a icewm di "
+"IceWM.\n"
 "  -m, --manual        Mostra il manuale di IceWM (predefinito).\n"
 "  -s                  Mostra la pagina di manuale relativa a icesound di "
 "IceWM.\n"
@@ -593,8 +593,8 @@ msgstr ""
 "Uso: %s [OPZIONI] AZIONI\n"
 "\n"
 "Opzioni:\n"
-"  -display DISPLAY            Si connette al server X specificato da DISPLAY."
-"\n"
+"  -display DISPLAY            Si connette al server X specificato da "
+"DISPLAY.\n"
 "                              Predefinito: $DISPLAY o :0.0 quando non "
 "impostato.\n"
 "  -window WINDOW_ID           Specifica la finestra su cui agire. "
@@ -617,8 +617,8 @@ msgstr ""
 "  setGeometry    geometria    Imposta la geometria della finestra\n"
 "  setState MASC STATO         Imposta lo stato della finestra di GNOME a "
 "STATO.\n"
-"                              Solo i bit selezionati da MASC sono modificati."
-"\n"
+"                              Solo i bit selezionati da MASC sono "
+"modificati.\n"
 "                              STATO e MASC sono espressioni del dominio\n"
 "                              'stato della finestra di GNOME'.\n"
 "  toggleState STATO           Commuta i bit di stato della finestra di "
@@ -899,11 +899,11 @@ msgstr ""
 "predefinito.\n"
 "                              Preferire una delle opzioni -A/-O/-S.\n"
 "\n"
-" -O, --oss=DEVICE        Specifica il dispositivo OSS (predefinito: \"%s\")."
+" -O, --oss=DEVICE        Specifica il dispositivo OSS (predefinito: \"%s"
+"\").\n"
 "\n"
-"\n"
-" -A, --alsa=DEVICE       Specifica il dispositvo ALSA (predefinito: \"%s\")."
-"\n"
+" -A, --alsa=DEVICE       Specifica il dispositvo ALSA (predefinito: \"%s"
+"\").\n"
 "\n"
 "-S, --server=ADDR:PORT        Specifica l'indirizzo e il numero di porta del "
 "server ESD.\n"
@@ -926,8 +926,8 @@ msgstr ""
 "\n"
 "-v, --verbose                 Prolisso e stampa ogni evento sonoro.\n"
 "\n"
-"-V, --version                 Stampa le informazioni sulla versione ed esce."
-"\n"
+"-V, --version                 Stampa le informazioni sulla versione ed "
+"esce.\n"
 "\n"
 "-h, --help                    Stampa la schermata della guida ed esce.\n"
 "\n"
@@ -1099,8 +1099,8 @@ msgstr ""
 "  -x, --trans=NOMI  Usa i colori di trasparenza da NOMI.\n"
 "\n"
 "  -e, --center=0/1     Disabilita/Abilita la centratura dello sfondo.\n"
-"  -a, --scaled=0/1     Disabilita/Abilita il ridimensionamento dello sfondo."
-"\n"
+"  -a, --scaled=0/1     Disabilita/Abilita il ridimensionamento dello "
+"sfondo.\n"
 "  -m, --multi=0/1      Disabilita/Abilita lo sfondo su più monitor.\n"
 "\n"
 "  --display=NOME      Usa NOME per connettersi al server X.\n"
@@ -1144,11 +1144,11 @@ msgstr "Uso: argomento opzione icewmhint [classe.istanza]\n"
 msgid "Out of memory (len=%d)."
 msgstr "Memoria esaurita (len=%d)."
 
-#: src/misc.cc:439 src/misc.cc:451
+#: src/misc.cc:440 src/misc.cc:452
 msgid "Warning: "
 msgstr "Avviso: "
 
-#: src/misc.cc:720
+#: src/misc.cc:728
 #, c-format
 msgid ""
 "Usage: %s [OPTIONS]\n"
