--- a/po/ko.po
+++ b/po/ko.po
@@ -8,11 +8,11 @@ msgid ""
 msgstr ""
 "Project-Id-Version: IceWM 1.2.35\n"
 "Report-Msgid-Bugs-To: https://github.com/bbidulock/icewm/issues\n"
-"POT-Creation-Date: 2018-01-16 16:56-0700\n"
+"POT-Creation-Date: 2018-02-03 20:04-0700\n"
 "PO-Revision-Date: 2018-01-31 10:10+0000\n"
 "Last-Translator: Hwajin Kim <hwajin.kim@e4net.net>\n"
-"Language-Team: Korean "
-"<https://l10n.opensuse.org/projects/icewm/icewm-1-4-branch/ko/>\n"
+"Language-Team: Korean <https://l10n.opensuse.org/projects/icewm/icewm-1-4-"
+"branch/ko/>\n"
 "Language: ko\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -430,7 +430,8 @@ msgstr ""
 "사용법: %s [옵션] [ 파일 이름 | URL ]\n"
 "\n"
 "IceHelp는 IceWM 창 관리자를 위한 아주 단순한 HTML 브라우저입니다.\n"
-"이 브라우저에서는 파일의 HTML 문서를 표시하거나 웹 사이트를 검색할 수 있습니다.\n"
+"이 브라우저에서는 파일의 HTML 문서를 표시하거나 웹 사이트를 검색할 수 있습니"
+"다.\n"
 "방문한 페이지를 이력으로 기억하며, 이 이력은 키 바인딩 및\n"
 "상황별 메뉴(마우스 오른쪽 단추 클릭)를 통해 탐색할 수 있습니다.\n"
 "이미지 렌더링도 JavaScript도 지원하지 않습니다.\n"
@@ -861,12 +862,14 @@ msgstr ""
 "\n"
 "옵션:\n"
 "\n"
-" -d, --display=DISPLAY   IceWM이 사용하는 X11 디스플레이입니다(기본값: $DISPLAY).\n"
+" -d, --display=DISPLAY   IceWM이 사용하는 X11 디스플레이입니다(기본값: "
+"$DISPLAY).\n"
 "\n"
 " -s, --sample-dir=DIR    사운드 파일이 포함된 디렉토리를 지정합니다.\n"
 "                         기본값은 $HOME/.config/icewm/sounds입니다.\n"
 "\n"
-" -i, --interface=LIST    오디오 출력 인터페이스를 지정합니다. %s에서 하나 이상을 선택합니다.\n"
+" -i, --interface=LIST    오디오 출력 인터페이스를 지정합니다. %s에서 하나 이"
+"상을 선택합니다.\n"
 "                         하나 이상일 경우 쉼표로 구분합니다.\n"
 "\n"
 " -D, --device=DEVICE     기본 장치만 이전 버전과 호환됩니다.\n"
@@ -879,12 +882,15 @@ msgstr ""
 " -S, --server=ADDR:PORT  ESD 서버 주소와 포트 번호를 지정합니다.\n"
 "                         ESD의 경우 기본값은 \"localhost:16001\"입니다.\n"
 "\n"
-" -z, --snooze=millisecs  사운드 이벤트(밀리초 단위) 사이의 스누즈 간격을 지정합니다.\n"
+" -z, --snooze=millisecs  사운드 이벤트(밀리초 단위) 사이의 스누즈 간격을 지정"
+"합니다.\n"
 "                         기본값은 500밀리초입니다.\n"
 "\n"
-" -p, --play=sound        지정된 사운드(이름 또는 번호)를 재생하고 종료합니다.\n"
+" -p, --play=sound        지정된 사운드(이름 또는 번호)를 재생하고 종료합니"
+"다.\n"
 "\n"
-" -l, --list-files        사용할 수 있는 사운드 파일 경로를 나열하고 종료합니다.\n"
+" -l, --list-files        사용할 수 있는 사운드 파일 경로를 나열하고 종료합니"
+"다.\n"
 "\n"
 "     --list-sounds       지원되는 사운드 파일 이름을 나열하고 종료합니다.\n"
 "\n"
@@ -1105,11 +1111,11 @@ msgstr "사용법: icewmhint [class.instance] option arg\n"
 msgid "Out of memory (len=%d)."
 msgstr "메모리 부족 (len=%d)."
 
-#: src/misc.cc:439 src/misc.cc:451
+#: src/misc.cc:440 src/misc.cc:452
 msgid "Warning: "
 msgstr "경고: "
 
-#: src/misc.cc:720
+#: src/misc.cc:728
 #, c-format
 msgid ""
 "Usage: %s [OPTIONS]\n"
@@ -1167,7 +1173,8 @@ msgstr "icewm에 관하여"
 
 #: src/wmapp.cc:105
 msgid "A window manager is already running, use --replace to replace it"
-msgstr "창 관리자가 이미 실행 중입니다. --replace를 사용하여 이 관리자를 바꿉니다."
+msgstr ""
+"창 관리자가 이미 실행 중입니다. --replace를 사용하여 이 관리자를 바꿉니다."
 
 #: src/wmapp.cc:123
 #, c-format
@@ -1342,7 +1349,8 @@ msgstr "IceWM 종료, Xterm으로 바꾸기"
 #: src/wmapp.cc:1330
 msgid ""
 "  --client-id=ID      Client id to use when contacting session manager.\n"
-msgstr "  --client-id=ID      세션 관리자에게 문의할 때 사용할 클라이언트 ID입니다.\n"
+msgstr ""
+"  --client-id=ID      세션 관리자에게 문의할 때 사용할 클라이언트 ID입니다.\n"
 
 #: src/wmapp.cc:1336
 msgid ""
@@ -1886,7 +1894,8 @@ msgstr "Ctrl+A"
 
 #: src/ylocale.cc:46
 msgid "Locale not supported by C library or Xlib. Falling back to 'C' locale'."
-msgstr "C 라이브러리 또는 Xlib가 지원하지 않는 로케일입니다. 'C' 로케일로 폴링합니다."
+msgstr ""
+"C 라이브러리 또는 Xlib가 지원하지 않는 로케일입니다. 'C' 로케일로 폴링합니다."
 
 #: src/ylocale.cc:72
 msgid ""
