--- a/po/nl.po
+++ b/po/nl.po
@@ -6,11 +6,11 @@ msgid ""
 msgstr ""
 "Project-Id-Version: icewm 1.2.23\n"
 "Report-Msgid-Bugs-To: https://github.com/bbidulock/icewm/issues\n"
-"POT-Creation-Date: 2018-01-16 16:56-0700\n"
+"POT-Creation-Date: 2018-02-03 20:04-0700\n"
 "PO-Revision-Date: 2018-01-29 15:52+0000\n"
 "Last-Translator: Eva van Rein <vistatec@globaltextware.nl>\n"
-"Language-Team: Dutch "
-"<https://l10n.opensuse.org/projects/icewm/icewm-1-4-branch/nl/>\n"
+"Language-Team: Dutch <https://l10n.opensuse.org/projects/icewm/icewm-1-4-"
+"branch/nl/>\n"
 "Language: nl\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -445,8 +445,8 @@ msgstr ""
 "\n"
 "  -B                  Weergeeft de manual page van IceWM icewmbg.\n"
 "  -b, --bugs          Weergeeft de IceWM-bugreports (op primitieve wijze).\n"
-"  -f, --faq           Weergeeft de IceWM FAQ (veelgestelde vragen) en HOWTO."
-"\n"
+"  -f, --faq           Weergeeft de IceWM FAQ (veelgestelde vragen) en "
+"HOWTO.\n"
 "  -g                  Weergeeft de IceWM Github-website.\n"
 "  -i, --icewm         Weergeeft de manual page van IceWM icewm.\n"
 "  -m, --manual        Weergeeft de IceWM Manual (standaard).\n"
@@ -895,8 +895,8 @@ msgstr ""
 "\n"
 " -A, --alsa=DEVICE       Specifieert het ALSA-apparaat (standaard: \"%s\").\n"
 "\n"
-" -S, --server=ADDR:PORT  Specifieert het/de ESD-serveradres en -poortnummer."
-"\n"
+" -S, --server=ADDR:PORT  Specifieert het/de ESD-serveradres en -"
+"poortnummer.\n"
 "                         De standaard voor ESD is 'localhost:16001'.\n"
 "\n"
 " -z, --snooze=millisecs  Specifieert het snooze-interval tussen "
@@ -987,8 +987,8 @@ msgid ""
 "  -c, --config=FILE   Load preferences from FILE.\n"
 "  -t, --theme=FILE    Load the theme from FILE.\n"
 msgstr ""
-"  -n, --notify        Aan ouderproces melden door signaal USR1 te verzenden."
-"\n"
+"  -n, --notify        Aan ouderproces melden door signaal USR1 te "
+"verzenden.\n"
 "  --display=NAME      NAAM gebruiken om te verbinden met de X-server.\n"
 "  --sync              Communicatie met X11-server synchroniseren.\n"
 "\n"
@@ -1137,11 +1137,11 @@ msgstr "Gebruik: icewmhint [klasse.instantie] optie argument\n"
 msgid "Out of memory (len=%d)."
 msgstr "Onvoldoende geheugen (len=%d)."
 
-#: src/misc.cc:439 src/misc.cc:451
+#: src/misc.cc:440 src/misc.cc:452
 msgid "Warning: "
 msgstr "Waarschuwing: "
 
-#: src/misc.cc:720
+#: src/misc.cc:728
 #, c-format
 msgid ""
 "Usage: %s [OPTIONS]\n"
