--- a/po/de.po
+++ b/po/de.po
@@ -6,11 +6,11 @@ msgid ""
 msgstr ""
 "Project-Id-Version: icewm 1.2.26\n"
 "Report-Msgid-Bugs-To: https://github.com/bbidulock/icewm/issues\n"
-"POT-Creation-Date: 2018-01-16 16:56-0700\n"
+"POT-Creation-Date: 2018-02-03 20:04-0700\n"
 "PO-Revision-Date: 2018-01-23 07:04+0000\n"
 "Last-Translator: Franziska Weinberger <f.weinberger@gemino.de>\n"
-"Language-Team: German "
-"<https://l10n.opensuse.org/projects/icewm/icewm-1-4-branch/de/>\n"
+"Language-Team: German <https://l10n.opensuse.org/projects/icewm/icewm-1-4-"
+"branch/de/>\n"
 "Language: de\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -430,12 +430,12 @@ msgstr ""
 "Syntax: %s [OPTIONEN] [ DATEINAME | URL ]\n"
 "\n"
 "IceHelp ist ein sehr einfacher HTML-Browser für den IceWM-Fenstermanager.\n"
-"Er kann zum Anzeigen eines HTML-Dokuments aus einer Datei oder Browsen einer "
-"\n"
-"Website verwendet werden. Die besuchten Seiten werden im Verlauf gespeichert,"
-"\n"
-"durch den Sie mit Tastenkombinationen und einem Kontextmenü (Klicken mit der "
-"\n"
+"Er kann zum Anzeigen eines HTML-Dokuments aus einer Datei oder Browsen "
+"einer \n"
+"Website verwendet werden. Die besuchten Seiten werden im Verlauf "
+"gespeichert,\n"
+"durch den Sie mit Tastenkombinationen und einem Kontextmenü (Klicken mit "
+"der \n"
 "rechten Maustaste) navigieren können. Der Browser unterstützt weder die "
 "Darstellung \n"
 "von Bildern noch JavaScript. Wenn keine Datei oder URL angegeben wird, wird "
@@ -1138,11 +1138,11 @@ msgstr "Verwendung: icewmhint [klasse.instanz] option argument\n"
 msgid "Out of memory (len=%d)."
 msgstr "Speichermangel (len=%d)."
 
-#: src/misc.cc:439 src/misc.cc:451
+#: src/misc.cc:440 src/misc.cc:452
 msgid "Warning: "
 msgstr "Warnung: "
 
-#: src/misc.cc:720
+#: src/misc.cc:728
 #, c-format
 msgid ""
 "Usage: %s [OPTIONS]\n"
