--- a/po/es.po
+++ b/po/es.po
@@ -7,11 +7,11 @@ msgid ""
 msgstr ""
 "Project-Id-Version: IceWM 1.2.26\n"
 "Report-Msgid-Bugs-To: https://github.com/bbidulock/icewm/issues\n"
-"POT-Creation-Date: 2018-01-20 10:37-0700\n"
+"POT-Creation-Date: 2018-02-03 20:04-0700\n"
 "PO-Revision-Date: 2018-01-25 20:34+0000\n"
 "Last-Translator: Juan Sarria <juansarriam@gmail.com>\n"
-"Language-Team: Spanish "
-"<https://l10n.opensuse.org/projects/icewm/icewm-1-4-branch/es/>\n"
+"Language-Team: Spanish <https://l10n.opensuse.org/projects/icewm/icewm-1-4-"
+"branch/es/>\n"
 "Language: es\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -880,8 +880,8 @@ msgstr ""
 "\n"
 " -s, --sample-dir=DIR          Especifica el directorio que contiene los "
 "archivos de sonido.\n"
-"                                         El valor por defecto es "
-"$HOME/.config/icewm/sounds.\n"
+"                                         El valor por defecto es $HOME/."
+"config/icewm/sounds.\n"
 "\n"
 " -i, --interface=LISTA          Especifica la interfaz de salida de audio. "
 "Una o más de:\n"
@@ -889,14 +889,14 @@ msgstr ""
 "\n"
 " -D, --device=DISPOSITIVO Solo compatible con versiones anteriores: el "
 "dispositivo por defecto.\n"
-"                                        Se prefiere una de las opciones "
-"-A/-O/-S.\n"
+"                                        Se prefiere una de las opciones -A/-"
+"O/-S.\n"
 "\n"
 " -O, --oss=DISPOSITIVO     Especifica el dispositivo OSS (por defecto: \"%s "
 "4\").\n"
 "\n"
-" -A, --alsa=DISPOSITIVO     Especifica el dispositivo ALSA (por defecto: \"%"
-"s 5\").\n"
+" -A, --alsa=DISPOSITIVO     Especifica el dispositivo ALSA (por defecto: "
+"\"%s 5\").\n"
 "\n"
 " -S, --server=DIRECCIÓN:PUERTO        Especifica la dirección del servidor "
 "ESD y\n"
@@ -923,8 +923,8 @@ msgstr ""
 " -v, --verbose                     Modo detallado e imprime cada evento de "
 "sonido.\n"
 "\n"
-" -V, --version                      Imprime información de la versión y sale."
-"\n"
+" -V, --version                      Imprime información de la versión y "
+"sale.\n"
 "\n"
 " -h, --help                          Imprime esta pantalla de ayuda y sale.\n"
 "\n"
@@ -1079,8 +1079,8 @@ msgid ""
 msgstr ""
 "Uso: icewmbg [OPCIONES]\n"
 "Si se pueden dar varios valores, se separan por comas.\n"
-"Si la imagen es un directorio, se usan todas las imágenes de ese directorio."
-"\n"
+"Si la imagen es un directorio, se usan todas las imágenes de ese "
+"directorio.\n"
 "\n"
 "Opciones:\n"
 "  -p, --replace                Sustituye un icewmbg existente.\n"
@@ -1094,8 +1094,8 @@ msgstr ""
 "  -i, --image=ARCHIVO(S)  Carga las imágenes de fondo de ARCHIVO(S).\n"
 "  -k, --color=NOMBRE(S)   Usa los colores de fondo de NOMBRE(S).\n"
 "\n"
-"  -s, --semis=ARCHIVO(S)  Carga las imágenes de transparencia de ARCHIVO(S)."
-"\n"
+"  -s, --semis=ARCHIVO(S)  Carga las imágenes de transparencia de "
+"ARCHIVO(S).\n"
 "  -x, --trans=NOMBRE(S)   Usa los colores de transparencia de NOMBRE(S).\n"
 "\n"
 "  -e, --center=0/1         Habilita/inhabilita el centrado del fondo.\n"
@@ -1143,11 +1143,11 @@ msgstr "Uso: icewmhint [class.instance] opción arg\n"
 msgid "Out of memory (len=%d)."
 msgstr "No queda memoria (len=%d)."
 
-#: src/misc.cc:439 src/misc.cc:451
+#: src/misc.cc:440 src/misc.cc:452
 msgid "Warning: "
 msgstr "Atención: "
 
-#: src/misc.cc:720
+#: src/misc.cc:728
 #, c-format
 msgid ""
 "Usage: %s [OPTIONS]\n"
