--- a/po/fr.po
+++ b/po/fr.po
@@ -7,11 +7,11 @@ msgid ""
 msgstr ""
 "Project-Id-Version: icewm 1.2.15pre3\n"
 "Report-Msgid-Bugs-To: https://github.com/bbidulock/icewm/issues\n"
-"POT-Creation-Date: 2018-01-16 16:56-0700\n"
+"POT-Creation-Date: 2018-02-03 20:04-0700\n"
 "PO-Revision-Date: 2018-01-29 16:38+0000\n"
 "Last-Translator: Christine Gabriel <christine@stoquart.com>\n"
-"Language-Team: French "
-"<https://l10n.opensuse.org/projects/icewm/icewm-1-4-branch/fr/>\n"
+"Language-Team: French <https://l10n.opensuse.org/projects/icewm/icewm-1-4-"
+"branch/fr/>\n"
 "Language: fr\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -445,8 +445,8 @@ msgstr ""
 "  --sync              Synchronise les commandes X11.\n"
 "\n"
 "  -B                  Affiche la page de manuel icewmbg de IceWM.\n"
-"  -b, --bugs          Affiche les rapports de bogue de IceWM (initialement)."
-"\n"
+"  -b, --bugs          Affiche les rapports de bogue de IceWM "
+"(initialement).\n"
 "  -f, --faq           Affiche la FAQ et les procédures IceWM.\n"
 "  -g                  Affiche le site Web Github de IceWM.\n"
 "  -i, --icewm         Affiche la page de manuel icewm de IceWM.\n"
@@ -888,10 +888,10 @@ msgstr ""
 " -d, --display=DISPLAY   Affichage X11 utilisé par IceWM (par défaut : "
 "$DISPLAY).\n"
 "\n"
-" -s, --sample-dir=DIR    Spécifie un répertoire contenant les fichiers audio."
-"\n"
-"                         L'emplacement par défaut est "
-"$HOME/.config/icewm/sounds.\n"
+" -s, --sample-dir=DIR    Spécifie un répertoire contenant les fichiers "
+"audio.\n"
+"                         L'emplacement par défaut est $HOME/.config/icewm/"
+"sounds.\n"
 "\n"
 " -i, --interface=LIST    Spécifie les interfaces de sortie audio. Une ou "
 "plusieurs parmi les suivantes :\n"
@@ -899,19 +899,19 @@ msgstr ""
 "\n"
 " -D, --device=DEVICE     Rétrocompatibilité uniquement : périphérique par "
 "défaut. \n"
-"                         Optez de préférence pour l'une des options -A/-O/-S."
+"                         Optez de préférence pour l'une des options -A/-O/-"
+"S.\n"
 "\n"
+" -O, --oss=DEVICE        Spécifie le périphérique OSS (par défaut : \"%s"
+"\").\n"
 "\n"
-" -O, --oss=DEVICE        Spécifie le périphérique OSS (par défaut : \"%s\")."
-"\n"
-"\n"
-" -A, --alsa=DEVICE       Spécifie le périphérique ALSA (par défaut : \"%s\")."
-"\n"
+" -A, --alsa=DEVICE       Spécifie le périphérique ALSA (par défaut : \"%s"
+"\").\n"
 "\n"
 " -S, --server=ADDR:PORT  Spécifie l'adresse et le numéro de port du serveur "
 "ESD.\n"
-"                         Pour ESD, la valeur par défaut est \"localhost:"
-"16001\".\n"
+"                         Pour ESD, la valeur par défaut est "
+"\"localhost:16001\".\n"
 "\n"
 " -z, --snooze=millisecs  Spécifie l'intervalle de répétition entre les "
 "événements audio\n"
@@ -1005,8 +1005,8 @@ msgid ""
 "  -c, --config=FILE   Load preferences from FILE.\n"
 "  -t, --theme=FILE    Load the theme from FILE.\n"
 msgstr ""
-"  -n, --notify        Avertit le processus parent en envoyant un signal USR1."
-"\n"
+"  -n, --notify        Avertit le processus parent en envoyant un signal "
+"USR1.\n"
 "  --display=NAME      Utilise NAME pour se connecter au serveur X.\n"
 "  --sync              Synchronise la communication avec le serveur X11.\n"
 "\n"
@@ -1104,12 +1104,12 @@ msgstr ""
 "  -c, --config=FILE    Charge les préférences à partir de FILE.\n"
 "  -t, --theme=NAME     Charge le thème nommé NAME.\n"
 "\n"
-"  -i, --image=FILE(S)  Charge les images d'arrière-plan à partir de FILE(S)."
-"\n"
+"  -i, --image=FILE(S)  Charge les images d'arrière-plan à partir de "
+"FILE(S).\n"
 "  -k, --color=NAME(S)  Utilise les couleurs d'arrière-plan de NAME(S).\n"
 "\n"
-"  -s, --semis=FILE(S)  Charge les images de transparence à partir de FILE(S)."
-"\n"
+"  -s, --semis=FILE(S)  Charge les images de transparence à partir de "
+"FILE(S).\n"
 "  -x, --trans=NAME(S)  Utilise les couleurs de transparence à partir de "
 "NAME(S).\n"
 "\n"
@@ -1127,8 +1127,8 @@ msgstr ""
 "\n"
 "Charge l'arrière-plan de bureau en fonction du fichier de préférences :\n"
 " DesktopBackgroundCenter  - Affiche l'arrière-plan de bureau centré\n"
-" DesktopBackgroundScaled  - Affiche l'arrière-plan de bureau mis à l'"
-"échelle\n"
+" DesktopBackgroundScaled  - Affiche l'arrière-plan de bureau mis à "
+"l'échelle\n"
 " DesktopBackgroundColor   - Couleur(s) de l'arrière-plan de bureau\n"
 " DesktopBackgroundImage   - Image(s) de l'arrière-plan de bureau\n"
 " SupportSemitransparency  - Prise en charge des terminaux translucides\n"
@@ -1161,11 +1161,11 @@ msgstr "Utilisation : icewmhint [classe.instance] option paramètre\n"
 msgid "Out of memory (len=%d)."
 msgstr "Plus de mémoire (len=%d)."
 
-#: src/misc.cc:439 src/misc.cc:451
+#: src/misc.cc:440 src/misc.cc:452
 msgid "Warning: "
 msgstr "Attention : "
 
-#: src/misc.cc:720
+#: src/misc.cc:728
 #, c-format
 msgid ""
 "Usage: %s [OPTIONS]\n"
@@ -1430,8 +1430,8 @@ msgstr ""
 "\n"
 "  -c, --config=FILE   Charge les préférences à partir de FILE.\n"
 "  -t, --theme=FILE    Charge le thème à partir de FILE.\n"
-"  --postpreferences   Imprime les préférences une fois le traitement terminé."
-"\n"
+"  --postpreferences   Imprime les préférences une fois le traitement "
+"terminé.\n"
 
 #: src/wmapp.cc:1349
 #, c-format
@@ -1478,8 +1478,8 @@ msgstr ""
 "  --replace           Remplace un gestionnaire de fenêtres existant.\n"
 "  -r, --restart       Indique à l'instance icewm de redémarrer.\n"
 "\n"
-"  --configured        Imprime la configuration de l'heure de la compilation."
-"\n"
+"  --configured        Imprime la configuration de l'heure de la "
+"compilation.\n"
 "  --directories       Imprime les répertoires de configuration.\n"
 "  -l, --list-themes   Imprime une liste de tous les thèmes disponibles.\n"
 "\n"
