--- a/po/pl.po
+++ b/po/pl.po
@@ -5,11 +5,11 @@ msgid ""
 msgstr ""
 "Project-Id-Version: 1.2.15\n"
 "Report-Msgid-Bugs-To: https://github.com/bbidulock/icewm/issues\n"
-"POT-Creation-Date: 2018-01-16 16:56-0700\n"
+"POT-Creation-Date: 2018-02-03 20:04-0700\n"
 "PO-Revision-Date: 2018-01-28 13:04+0000\n"
 "Last-Translator: Ewelina Michalowska <ewelina.michalowska@stgambit.com>\n"
-"Language-Team: Polish "
-"<https://l10n.opensuse.org/projects/icewm/icewm-1-4-branch/pl/>\n"
+"Language-Team: Polish <https://l10n.opensuse.org/projects/icewm/icewm-1-4-"
+"branch/pl/>\n"
 "Language: pl\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -49,8 +49,8 @@ msgid ""
 "stat:\tuser = %llu, nice = %llu, sys = %llu, idle = %llu, iowait = %llu, "
 "intr = %llu, softirq = %llu, steal = %llu\n"
 msgstr ""
-"statystyki:\tuser = %llu, nice = %llu, sys = %llu, idle = %llu, iowait = %"
-"llu, intr = %llu, softirq = %llu, steal = %llu\n"
+"statystyki:\tuser = %llu, nice = %llu, sys = %llu, idle = %llu, iowait = "
+"%llu, intr = %llu, softirq = %llu, steal = %llu\n"
 
 #: src/acpustatus.cc:201
 #, c-format
@@ -440,8 +440,8 @@ msgstr ""
 "  -d, --display=NAZWA  NAZWA używanego serwera X.\n"
 "  --sync              Synchronizacja poleceń X11.\n"
 "\n"
-"  -B        Wyświetlenie strony podręcznika programu icewmbg menedżera IceWM."
-"\n"
+"  -B        Wyświetlenie strony podręcznika programu icewmbg menedżera "
+"IceWM.\n"
 "  -b, --bugs  Wyświetlenie raportów błędów menedżera IceWM (podstawowych).\n"
 "  -f, --faq   Wyświetlenie dokumentów FAQ i Howto menedżera IceWM.\n"
 "  -g           Wyświetlenie witryny Github menedżera IceWM.\n"
@@ -1103,10 +1103,10 @@ msgstr ""
 "↵\n"
 " center:0 scaled:0 = sąsiadująco↵\n"
 " center:1 scaled:0 = wyśrodkowane↵\n"
-" center:1 scaled:1 = wypełnij jeden wymiar i zachowaj współczynnik proporcji↵"
-"\n"
-" center:0 scaled:1 = wypełnij oba wymiary i zachowaj współczynnik proporcji↵"
-"\n"
+" center:1 scaled:1 = wypełnij jeden wymiar i zachowaj współczynnik "
+"proporcji↵\n"
+" center:0 scaled:1 = wypełnij oba wymiary i zachowaj współczynnik "
+"proporcji↵\n"
 "\n"
 
 #: src/icewmbg.cc:754
@@ -1127,11 +1127,11 @@ msgstr "Użycie: icewhint [class.instance] opcja arg\n"
 msgid "Out of memory (len=%d)."
 msgstr "Brak pamięci (len=%d)."
 
-#: src/misc.cc:439 src/misc.cc:451
+#: src/misc.cc:440 src/misc.cc:452
 msgid "Warning: "
 msgstr "Ostrzeżenie: "
 
-#: src/misc.cc:720
+#: src/misc.cc:728
 #, c-format
 msgid ""
 "Usage: %s [OPTIONS]\n"
@@ -1391,8 +1391,8 @@ msgstr ""
 "\n"
 "  -c, --config=PLIK   Wczytanie preferencji z PLIKU.\n"
 "  -t, --theme=PLIK    Wczytanie motywu z PLIKU.\n"
-"  --postpreferences   Wyświetlenie preferencji po zakończeniu przetwarzania."
-"\n"
+"  --postpreferences   Wyświetlenie preferencji po zakończeniu "
+"przetwarzania.\n"
 
 #: src/wmapp.cc:1349
 #, c-format
