--- a/po/ru.po
+++ b/po/ru.po
@@ -14,17 +14,17 @@ msgid ""
 msgstr ""
 "Project-Id-Version: IceWM 1.4.2\n"
 "Report-Msgid-Bugs-To: https://github.com/bbidulock/icewm/issues\n"
-"POT-Creation-Date: 2018-01-16 16:56-0700\n"
+"POT-Creation-Date: 2018-02-03 20:04-0700\n"
 "PO-Revision-Date: 2018-02-02 05:04+0000\n"
 "Last-Translator: Nikita Maynagashev <maynagashev@palex.ru>\n"
-"Language-Team: Russian "
-"<https://l10n.opensuse.org/projects/icewm/icewm-1-4-branch/ru/>\n"
+"Language-Team: Russian <https://l10n.opensuse.org/projects/icewm/icewm-1-4-"
+"branch/ru/>\n"
 "Language: ru\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=3; plural=n%10==1 && n%100!=11 ? 0 : n%10>=2 && n%10<="
-"4 && (n%100<10 || n%100>=20) ? 1 : 2;\n"
+"Plural-Forms: nplurals=3; plural=n%10==1 && n%100!=11 ? 0 : n%10>=2 && n"
+"%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2;\n"
 "X-Generator: Weblate 2.18\n"
 "X-Language: ru_RU\n"
 "X-Source-Language: C\n"
@@ -628,8 +628,8 @@ msgstr ""
 "                              указанных с помощью выражения STATE.\n"
 "  setHints       HINTS        Установка значения HINTS для подсказок окна "
 "GNOME.\n"
-"  setLayer       LAYER        Перемещение окна на другой уровень окон GNOME."
-"\n"
+"  setLayer       LAYER        Перемещение окна на другой уровень окон "
+"GNOME.\n"
 "  setWorkspace   WORKSPACE    Перемещение окна в другую рабочую область.\n"
 "                              Чтобы изменить текущую рабочую область, "
 "выберите корневое окно.\n"
@@ -1133,11 +1133,11 @@ msgstr "Использование: icewmhint [class.instance] option argument\n
 msgid "Out of memory (len=%d)."
 msgstr "Не хватает памяти (len=%d)."
 
-#: src/misc.cc:439 src/misc.cc:451
+#: src/misc.cc:440 src/misc.cc:452
 msgid "Warning: "
 msgstr "Внимание: "
 
-#: src/misc.cc:720
+#: src/misc.cc:728
 #, c-format
 msgid ""
 "Usage: %s [OPTIONS]\n"
@@ -1924,7 +1924,8 @@ msgstr "Ctrl+A"
 
 #: src/ylocale.cc:46
 msgid "Locale not supported by C library or Xlib. Falling back to 'C' locale'."
-msgstr "Локаль не поддерживается библиотекой C или Xlib. Используется локаль C."
+msgstr ""
+"Локаль не поддерживается библиотекой C или Xlib. Используется локаль C."
 
 #: src/ylocale.cc:72
 msgid ""
